Fix to small text on smaller viewports, Adjust fontsize and fontfamily, make picture height on smartphones smaller

--- a/src/style/infoBoard.css
+++ b/src/style/infoBoard.css
@@ -1,13 +1,8 @@
 
-.infoContainer {
-  margin: 0 !important;
-}
-
 .infoElement {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 2.5vw;
 }
 
 .imageContainer {
@@ -15,10 +10,13 @@
   padding-bottom: 0 !important;
   padding-left: 0 !important;
   padding-right: 0 !important;
+  align-items: center !important;
+  position: relative;
+  overflow: hidden;
 }
 
 .infoText {
-  font-family: monospace;
+  font-family: 'Roboto', sans-serif, monospace;
   padding-top: 0 !important;
   padding-bottom: 0 !important;
 }
